--- a/index - bk.html
+++ b/index - bk.html
@@ -1,7 +1,8 @@
 ﻿<!DOCTYPE html>
 <!-- Microdata markup added by Google Structured Data Markup Helper. -->
-<html lang="en">
+<html data-ng-app="MAQSoftwareApp" lang="en">
 <head>
+    <base href="/">
     <meta charset="utf-8" />
     <title>MAQ Software | Data Management, Power BI, Artificial Intelligence</title>
     <meta name="title" content="MAQ Software | Data Management, Power BI, Artificial Intelligence" />
@@ -24,17 +25,17 @@
     <link rel="icon" type="image/png" href="img/favicon.ico">
     <link rel="apple-touch-icon" href="img/favicon.ico">
     <!-- CSS -->
-    <link href="../css/style.min.css?v=20170830" rel="stylesheet" type="text/css" />
-    <link href="../css/bootstrap.min.css?v=20170822" rel="stylesheet" type="text/css" />
-    <link href="../css/font-awesome.css?v=20170822" rel="stylesheet" type="text/css" />
-    <link href="../css/ionicons.css?v=20170822" rel="stylesheet" type="text/css" />
-    <link href="../css/plugin/sidebar-menu.css?v=20170822" rel="stylesheet" type="text/css" />
-    <link href="../css/plugin/animate.css?v=20170822" rel="stylesheet" type="text/css" />
-    <link href="../css/jquery-ui.css?v=20170822" rel="stylesheet" type="text/css" />
+    <link href="css/style.min.css?v=20170830" rel="stylesheet" type="text/css" />
+    <link href="css/bootstrap.min.css?v=20170822" rel="stylesheet" type="text/css" />
+    <link href="css/font-awesome.css?v=20170822" rel="stylesheet" type="text/css" />
+    <link href="css/ionicons.css?v=20170822" rel="stylesheet" type="text/css" />
+    <link href="css/plugin/sidebar-menu.css?v=20170822" rel="stylesheet" type="text/css" />
+    <link href="css/plugin/animate.css?v=20170822" rel="stylesheet" type="text/css" />
+    <link href="css/jquery-ui.css?v=20170822" rel="stylesheet" type="text/css" />
     <!--<link href="css/plugin/YTPlayer.css?v=20170822" rel="stylesheet" />-->
-    <link href="../css/plugin/owl.carousel.2.0.0-beta.3.min.css" rel="stylesheet" />
+    <link href="css/plugin/owl.carousel.2.0.0-beta.3.min.css" rel="stylesheet" />
     <!-- Github Pages hack to allow SPA refresh without receiving 404. -->
-    <!--<script>
+    <script>
 
         (function () {
             var redirect = sessionStorage.redirect;
@@ -43,7 +44,7 @@
                 history.replaceState(null, null, redirect);
             }
         })();
-    </script>-->
+    </script>
     <!-- /Github Pages hack. -->
 </head>
 <body>
@@ -63,7 +64,7 @@
                 <div class="logo">
                     <a href="/#">
                         <!--<img class="logo-light" src="img/MAQSoftware2.png" alt="MAQ Software" />-->
-                        <img class="logo-dark" src="../img/MAQSoftware.png" alt="MAQ Software" />
+                        <img class="logo-dark" src="img/MAQSoftware.png" alt="MAQ Software" />
                     </a>
                 </div>
                 <!-- End Logo -->
@@ -109,63 +110,7 @@
         <!-- End Header -->
         <!-- CONTENT --------------------------------------------------------------------------------->
         <section id="body" class="ls-point01em">
-            <div style="padding-top: 64px; text-align: center">
-            <div class="nf-item spacing" style="display: inline-block; width:300px; height: 300px">
-                <div class="item-box">
-                    <img alt="Bowtie Chart" src="../../img/PowerBI/Bowtie_Chart.png" class="item-container">
-                    <div class="item-mask">
-                        <div class="item-caption text-center" style="color:white;">
-                            <div>Displays categorization of a value by branching out smooth interpolated nodes</div>
-                            <a data-toggle="modal" data-target="#modelBowtieChart" class="btn btn-line-xs btn-white-line"><i class="fa"></i>Learn More</a>
-                        </div>
-                    </div>
-                </div>
-                <h6 class="text-center pt-15"><a href="https://store.office.com/en-001/app.aspx?assetid=WA104380838&ui=en-US&rs=en-001&ad=US&appredirect=false" target="_blank">Bowtie Chart</a></h6>
-            </div>
-            <div class="nf-item spacing" style="display: inline-block; width:300px; height: 300px">
-                <div class="item-box">
-
-                    <img alt="Brick Chart" src="../../img/PowerBI/Brick_Chart.png" class="item-container">
-                    <div class="item-mask">
-                        <div class="item-caption text-center" style="color:white;">
-                            <div>Consists of 100 squares that are colored according to the percentage breakdown of your datasets</div>
-                            <a data-toggle="modal" data-target="#modelBrickChart" class="btn btn-line-xs btn-white-line"><i class="fa"></i>Learn More</a>
-                        </div>
-                    </div>
-
-                </div>
-                <h6 class="text-center pt-15"><a href="https://store.office.com/en-001/app.aspx?assetid=WA104380836&ui=en-US&rs=en-001&ad=US&appredirect=false" target="_blank">Brick Chart</a></h6>
-            </div>
-            <div class="nf-item gauge spacing" style="display: inline-block; width:300px; height: 300px">
-                <div class="item-box">
-
-                    <img alt="Circular Gauge" src="../../img/PowerBI/Circular_Gauge.png" class="item-container">
-                    <div class="item-mask">
-                        <div class="item-caption text-center" style="color:white;">
-                            <div>Illustrate headway toward goals in either a pie or a donut chart format.</div>
-                            <a data-toggle="modal" data-target="#modelCircularGaugeChart" class="btn btn-line-xs btn-white-line"><i class="fa"></i>Learn More</a>
-                        </div>
-                    </div>
-
-                </div>
-                <h6 class="text-center pt-15"><a href="https://store.office.com/en-001/app.aspx?assetid=WA104380837&ui=en-US&rs=en-001&ad=US&appredirect=false" target="_blank">Circular Gauge</a></h6>
-            </div>
-
-            <div class="nf-item gauge spacing" style="display: inline-block; width:300px; height: 300px">
-                <div class="item-box">
-
-                    <img alt="Cynlindrical Gauge" src="../../img/PowerBI/Cylindrical_Gauge.png" class="item-container">
-                    <div class="item-mask">
-                        <div class="item-caption text-center" style="color:white;">
-                            <div>Track current values against a target with an intuitive 3D cylinder visual</div>
-                            <a data-toggle="modal" data-target="#modelCylindricalGaugeChart" class="btn btn-line-xs btn-white-line"><i class="fa"></i>Learn More</a>
-                        </div>
-                    </div>
-
-                </div>
-                <h6 class="text-center pt-15"><a href="https://store.office.com/en-001/app.aspx?assetid=WA104380874&ui=en-US&rs=en-001&ad=US&appredirect=false" target="_blank">Cynlindrical Gauge</a></h6>
-            </div>
-                </div>
+            <div data-ng-view="" autoscroll="true"></div>
         </section>
         <!-- END CONTENT ---------------------------------------------------------------------------->
         <!-- FOOTER -->
@@ -225,39 +170,39 @@
     </div>
     <!-- Site Wraper End -->
     <!-- JS -->
-<!--    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js"></script>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular-route.min.js"></script>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular-resource.min.js"></script>
-    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular-animate.min.js"></script>-->
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular-animate.min.js"></script>
     <!-- Load app main script -->
-    <script src="../js/plugin/tether.min.js?v=20170822" type="text/javascript"></script>
-    <script src="../js/jquery-1.11.2.min.js?v=20170822" type="text/javascript"></script>
-    <script src="../js/plugin/jquery.easing.js?v=20170822" type="text/javascript"></script>
-    <script src="../js/jquery-ui.min.js?v=20170822" type="text/javascript"></script>
-    <script src="../js/bootstrap.min.js?v=20170822" type="text/javascript"></script>
-    <script src="../js/plugin/jquery.flexslider.js?v=20170822" type="text/javascript"></script>
-    <script src="../js/plugin/jquery.fitvids.js?v=20170822" type="text/javascript"></script>
-    <script src="../js/plugin/jquery.viewportchecker.js?v=20170822" type="text/javascript"></script>
-    <script src="../js/plugin/jquery.stellar.min.js?v=20170822" type="text/javascript"></script>
-    <script src="../js/plugin/wow.min.js?v=20170822" type="text/javascript"></script>
-    <script src="../js/plugin/jquery.colorbox-min.js?v=20170822" type="text/javascript"></script>
+    <script src="js/plugin/tether.min.js?v=20170822" type="text/javascript"></script>
+    <script src="js/jquery-1.11.2.min.js?v=20170822" type="text/javascript"></script>
+    <script src="js/plugin/jquery.easing.js?v=20170822" type="text/javascript"></script>
+    <script src="js/jquery-ui.min.js?v=20170822" type="text/javascript"></script>
+    <script src="js/bootstrap.min.js?v=20170822" type="text/javascript"></script>
+    <script src="js/plugin/jquery.flexslider.js?v=20170822" type="text/javascript"></script>
+    <script src="js/plugin/jquery.fitvids.js?v=20170822" type="text/javascript"></script>
+    <script src="js/plugin/jquery.viewportchecker.js?v=20170822" type="text/javascript"></script>
+    <script src="js/plugin/jquery.stellar.min.js?v=20170822" type="text/javascript"></script>
+    <script src="js/plugin/wow.min.js?v=20170822" type="text/javascript"></script>
+    <script src="js/plugin/jquery.colorbox-min.js?v=20170822" type="text/javascript"></script>
     <!--<script src="js/plugin/owl.carousel.min.js?v=20170822" type="text/javascript"></script>-->
-    <script src="../js/plugin/owl.carousel.2.0.0-beta.3.min.js"></script>
-    <script src="../js/plugin/isotope.pkgd.min.js?v=20170822" type="text/javascript"></script>
-    <script src="../js/plugin/masonry.pkgd.min.js?v=20170822" type="text/javascript"></script>
-    <script src="../js/plugin/imagesloaded.pkgd.min.js?v=20170822" type="text/javascript"></script>
-    <script src="../js/plugin/jquery.fs.tipper.min.js?v=20170822" type="text/javascript"></script>
-    <script src="../js/plugin/mediaelement-and-player.min.js?v=20170822"></script>
-    <script src="../js/plugin/sidebar-menu.js?v=20170822" type="text/javascript"></script>
+    <script src="js/plugin/owl.carousel.2.0.0-beta.3.min.js"></script>
+    <script src="js/plugin/isotope.pkgd.min.js?v=20170822" type="text/javascript"></script>
+    <script src="js/plugin/masonry.pkgd.min.js?v=20170822" type="text/javascript"></script>
+    <script src="js/plugin/imagesloaded.pkgd.min.js?v=20170822" type="text/javascript"></script>
+    <script src="js/plugin/jquery.fs.tipper.min.js?v=20170822" type="text/javascript"></script>
+    <script src="js/plugin/mediaelement-and-player.min.js?v=20170822"></script>
+    <script src="js/plugin/sidebar-menu.js?v=20170822" type="text/javascript"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
-    <script src="../js/theme.js?v=20170828.6" type="text/javascript"></script>
-    <script src="../js/navigation.js?v=20170822" type="text/javascript"></script>
-    <script src="../js/contact.js?v=20170828.2" type="text/javascript"></script>
-    <script src="../js/common.js?v=20170828.1" type="text/javascript"></script>
-    <script src="../js/home.js?v=20170830" type="text/javascript"></script>
-    <script src="../js/news.js?v=20170823.3" type="text/javascript"></script>
-    <script src="../js/app.js?v=20170828.3" type="text/javascript"></script>
-    <script src="../js/careers.js?v=20170822"></script>
+    <script src="js/theme.js?v=20170828.6" type="text/javascript"></script>
+    <script src="js/navigation.js?v=20170822" type="text/javascript"></script>
+    <script src="js/contact.js?v=20170828.2" type="text/javascript"></script>
+    <script src="js/common.js?v=20170828.1" type="text/javascript"></script>
+    <script src="js/home.js?v=20170830" type="text/javascript"></script>
+    <script src="js/news.js?v=20170823.3" type="text/javascript"></script>
+    <script src="js/app.js?v=20170828.3" type="text/javascript"></script>
+    <script src="js/careers.js?v=20170822"></script>
 
     <script type="application/ld+json">
         { "@context" : "http://schema.org",
