updated css, js path

--- a/header.html
+++ b/header.html
@@ -24,15 +24,15 @@
     <link rel="icon" type="image/png" href="img/favicon.ico">
     <link rel="apple-touch-icon" href="img/favicon.ico">
     <!-- CSS -->
-    <link href="css/style.min.css?v=20170830" rel="stylesheet" type="text/css" />
-    <link href="css/bootstrap.min.css?v=20170822" rel="stylesheet" type="text/css" />
-    <link href="css/font-awesome.css?v=20170822" rel="stylesheet" type="text/css" />
-    <link href="css/ionicons.css?v=20170822" rel="stylesheet" type="text/css" />
-    <link href="css/plugin/sidebar-menu.css?v=20170822" rel="stylesheet" type="text/css" />
-    <link href="css/plugin/animate.css?v=20170822" rel="stylesheet" type="text/css" />
-    <link href="css/jquery-ui.css?v=20170822" rel="stylesheet" type="text/css" />
-    <!--<link href="css/plugin/YTPlayer.css?v=20170822" rel="stylesheet" />-->
-    <link href="css/plugin/owl.carousel.2.0.0-beta.3.min.css" rel="stylesheet" />
+    <link href="/css/style.min.css?v=20170830" rel="stylesheet" type="text/css" />
+    <link href="/css/bootstrap.min.css?v=20170822" rel="stylesheet" type="text/css" />
+    <link href="/css/font-awesome.css?v=20170822" rel="stylesheet" type="text/css" />
+    <link href="/css/ionicons.css?v=20170822" rel="stylesheet" type="text/css" />
+    <link href="/css/plugin/sidebar-menu.css?v=20170822" rel="stylesheet" type="text/css" />
+    <link href="/css/plugin/animate.css?v=20170822" rel="stylesheet" type="text/css" />
+    <link href="/css/jquery-ui.css?v=20170822" rel="stylesheet" type="text/css" />
+    <!--<link href="/css/plugin/YTPlayer.css?v=20170822" rel="stylesheet" />-->
+    <link href="/css/plugin/owl.carousel.2.0.0-beta.3.min.css" rel="stylesheet" />
     <!-- Github Pages hack to allow SPA refresh without receiving 404. -->
     <!--<script>
 
