--- a/careers.html
+++ b/careers.html
@@ -24,15 +24,15 @@
     <link rel="icon" type="image/png" href="img/favicon.ico">
     <link rel="apple-touch-icon" href="img/favicon.ico">
     <!-- CSS -->
-    <link href="css/style.min.css?v=20170830" rel="stylesheet" type="text/css" />
-    <link href="css/bootstrap.min.css?v=20170822" rel="stylesheet" type="text/css" />
-    <link href="css/font-awesome.css?v=20170822" rel="stylesheet" type="text/css" />
-    <link href="css/ionicons.css?v=20170822" rel="stylesheet" type="text/css" />
-    <link href="css/plugin/sidebar-menu.css?v=20170822" rel="stylesheet" type="text/css" />
-    <link href="css/plugin/animate.css?v=20170822" rel="stylesheet" type="text/css" />
-    <link href="css/jquery-ui.css?v=20170822" rel="stylesheet" type="text/css" />
-    <!--<link href="css/plugin/YTPlayer.css?v=20170822" rel="stylesheet" />-->
-    <link href="css/plugin/owl.carousel.2.0.0-beta.3.min.css" rel="stylesheet" />
+    <link href="/css/style.min.css?v=20170830" rel="stylesheet" type="text/css" />
+    <link href="/css/bootstrap.min.css?v=20170822" rel="stylesheet" type="text/css" />
+    <link href="/css/font-awesome.css?v=20170822" rel="stylesheet" type="text/css" />
+    <link href="/css/ionicons.css?v=20170822" rel="stylesheet" type="text/css" />
+    <link href="/css/plugin/sidebar-menu.css?v=20170822" rel="stylesheet" type="text/css" />
+    <link href="/css/plugin/animate.css?v=20170822" rel="stylesheet" type="text/css" />
+    <link href="/css/jquery-ui.css?v=20170822" rel="stylesheet" type="text/css" />
+    <!--<link href="/css/plugin/YTPlayer.css?v=20170822" rel="stylesheet" />-->
+    <link href="/css/plugin/owl.carousel.2.0.0-beta.3.min.css" rel="stylesheet" />
     <!-- Github Pages hack to allow SPA refresh without receiving 404. -->
     <!--<script>
 
@@ -583,34 +583,34 @@
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular-resource.min.js"></script>
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular-animate.min.js"></script>-->
 <!-- Load app main script -->
-<script src="js/plugin/tether.min.js?v=20170822" type="text/javascript"></script>
-<script src="js/jquery-1.11.2.min.js?v=20170822" type="text/javascript"></script>
-<script src="js/plugin/jquery.easing.js?v=20170822" type="text/javascript"></script>
-<script src="js/jquery-ui.min.js?v=20170822" type="text/javascript"></script>
-<script src="js/bootstrap.min.js?v=20170822" type="text/javascript"></script>
-<script src="js/plugin/jquery.flexslider.js?v=20170822" type="text/javascript"></script>
-<script src="js/plugin/jquery.fitvids.js?v=20170822" type="text/javascript"></script>
-<script src="js/plugin/jquery.viewportchecker.js?v=20170822" type="text/javascript"></script>
-<script src="js/plugin/jquery.stellar.min.js?v=20170822" type="text/javascript"></script>
-<script src="js/plugin/wow.min.js?v=20170822" type="text/javascript"></script>
-<script src="js/plugin/jquery.colorbox-min.js?v=20170822" type="text/javascript"></script>
-<!--<script src="js/plugin/owl.carousel.min.js?v=20170822" type="text/javascript"></script>-->
-<script src="js/plugin/owl.carousel.2.0.0-beta.3.min.js"></script>
-<script src="js/plugin/isotope.pkgd.min.js?v=20170822" type="text/javascript"></script>
-<script src="js/plugin/masonry.pkgd.min.js?v=20170822" type="text/javascript"></script>
-<script src="js/plugin/imagesloaded.pkgd.min.js?v=20170822" type="text/javascript"></script>
-<script src="js/plugin/jquery.fs.tipper.min.js?v=20170822" type="text/javascript"></script>
-<script src="js/plugin/mediaelement-and-player.min.js?v=20170822"></script>
-<script src="js/plugin/sidebar-menu.js?v=20170822" type="text/javascript"></script>
+<script src="/js/plugin/tether.min.js?v=20170822" type="text/javascript"></script>
+<script src="/js/jquery-1.11.2.min.js?v=20170822" type="text/javascript"></script>
+<script src="/js/plugin/jquery.easing.js?v=20170822" type="text/javascript"></script>
+<script src="/js/jquery-ui.min.js?v=20170822" type="text/javascript"></script>
+<script src="/js/bootstrap.min.js?v=20170822" type="text/javascript"></script>
+<script src="/js/plugin/jquery.flexslider.js?v=20170822" type="text/javascript"></script>
+<script src="/js/plugin/jquery.fitvids.js?v=20170822" type="text/javascript"></script>
+<script src="/js/plugin/jquery.viewportchecker.js?v=20170822" type="text/javascript"></script>
+<script src="/js/plugin/jquery.stellar.min.js?v=20170822" type="text/javascript"></script>
+<script src="/js/plugin/wow.min.js?v=20170822" type="text/javascript"></script>
+<script src="/js/plugin/jquery.colorbox-min.js?v=20170822" type="text/javascript"></script>
+<!--<script src="/js/plugin/owl.carousel.min.js?v=20170822" type="text/javascript"></script>-->
+<script src="/js/plugin/owl.carousel.2.0.0-beta.3.min.js"></script>
+<script src="/js/plugin/isotope.pkgd.min.js?v=20170822" type="text/javascript"></script>
+<script src="/js/plugin/masonry.pkgd.min.js?v=20170822" type="text/javascript"></script>
+<script src="/js/plugin/imagesloaded.pkgd.min.js?v=20170822" type="text/javascript"></script>
+<script src="/js/plugin/jquery.fs.tipper.min.js?v=20170822" type="text/javascript"></script>
+<script src="/js/plugin/mediaelement-and-player.min.js?v=20170822"></script>
+<script src="/js/plugin/sidebar-menu.js?v=20170822" type="text/javascript"></script>
 <script src="https://www.youtube.com/iframe_api"></script>
-<script src="js/theme.js?v=20170828.6" type="text/javascript"></script>
-<script src="js/navigation.js?v=20170822" type="text/javascript"></script>
-<script src="js/contact.js?v=20170828.2" type="text/javascript"></script>
-<script src="js/common.js?v=20170828.1" type="text/javascript"></script>
-<script src="js/home.js?v=20170830" type="text/javascript"></script>
-<script src="js/news.js?v=20170823.3" type="text/javascript"></script>
-<!--<script src="js/app.js?v=20170828.3" type="text/javascript"></script>-->
-<script src="js/careers.js?v=20170822"></script>
+<script src="/js/theme.js?v=20170828.6" type="text/javascript"></script>
+<script src="/js/navigation.js?v=20170822" type="text/javascript"></script>
+<script src="/js/contact.js?v=20170828.2" type="text/javascript"></script>
+<script src="/js/common.js?v=20170828.1" type="text/javascript"></script>
+<script src="/js/home.js?v=20170830" type="text/javascript"></script>
+<script src="/js/news.js?v=20170823.3" type="text/javascript"></script>
+<!--<script src="/js/app.js?v=20170828.3" type="text/javascript"></script>-->
+<script src="/js/careers.js?v=20170822"></script>
 
 <script type="application/ld+json">
     { "@context" : "http://schema.org",
