--- a/footer.html
+++ b/footer.html
@@ -58,34 +58,34 @@
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular-resource.min.js"></script>
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular-animate.min.js"></script>-->
 <!-- Load app main script -->
-<script src="js/plugin/tether.min.js?v=20170822" type="text/javascript"></script>
-<script src="js/jquery-1.11.2.min.js?v=20170822" type="text/javascript"></script>
-<script src="js/plugin/jquery.easing.js?v=20170822" type="text/javascript"></script>
-<script src="js/jquery-ui.min.js?v=20170822" type="text/javascript"></script>
-<script src="js/bootstrap.min.js?v=20170822" type="text/javascript"></script>
-<script src="js/plugin/jquery.flexslider.js?v=20170822" type="text/javascript"></script>
-<script src="js/plugin/jquery.fitvids.js?v=20170822" type="text/javascript"></script>
-<script src="js/plugin/jquery.viewportchecker.js?v=20170822" type="text/javascript"></script>
-<script src="js/plugin/jquery.stellar.min.js?v=20170822" type="text/javascript"></script>
-<script src="js/plugin/wow.min.js?v=20170822" type="text/javascript"></script>
-<script src="js/plugin/jquery.colorbox-min.js?v=20170822" type="text/javascript"></script>
-<!--<script src="js/plugin/owl.carousel.min.js?v=20170822" type="text/javascript"></script>-->
-<script src="js/plugin/owl.carousel.2.0.0-beta.3.min.js"></script>
-<script src="js/plugin/isotope.pkgd.min.js?v=20170822" type="text/javascript"></script>
-<script src="js/plugin/masonry.pkgd.min.js?v=20170822" type="text/javascript"></script>
-<script src="js/plugin/imagesloaded.pkgd.min.js?v=20170822" type="text/javascript"></script>
-<script src="js/plugin/jquery.fs.tipper.min.js?v=20170822" type="text/javascript"></script>
-<script src="js/plugin/mediaelement-and-player.min.js?v=20170822"></script>
-<script src="js/plugin/sidebar-menu.js?v=20170822" type="text/javascript"></script>
+<script src="/js/plugin/tether.min.js?v=20170822" type="text/javascript"></script>
+<script src="/js/jquery-1.11.2.min.js?v=20170822" type="text/javascript"></script>
+<script src="/js/plugin/jquery.easing.js?v=20170822" type="text/javascript"></script>
+<script src="/js/jquery-ui.min.js?v=20170822" type="text/javascript"></script>
+<script src="/js/bootstrap.min.js?v=20170822" type="text/javascript"></script>
+<script src="/js/plugin/jquery.flexslider.js?v=20170822" type="text/javascript"></script>
+<script src="/js/plugin/jquery.fitvids.js?v=20170822" type="text/javascript"></script>
+<script src="/js/plugin/jquery.viewportchecker.js?v=20170822" type="text/javascript"></script>
+<script src="/js/plugin/jquery.stellar.min.js?v=20170822" type="text/javascript"></script>
+<script src="/js/plugin/wow.min.js?v=20170822" type="text/javascript"></script>
+<script src="/js/plugin/jquery.colorbox-min.js?v=20170822" type="text/javascript"></script>
+<!--<script src="/js/plugin/owl.carousel.min.js?v=20170822" type="text/javascript"></script>-->
+<script src="/js/plugin/owl.carousel.2.0.0-beta.3.min.js"></script>
+<script src="/js/plugin/isotope.pkgd.min.js?v=20170822" type="text/javascript"></script>
+<script src="/js/plugin/masonry.pkgd.min.js?v=20170822" type="text/javascript"></script>
+<script src="/js/plugin/imagesloaded.pkgd.min.js?v=20170822" type="text/javascript"></script>
+<script src="/js/plugin/jquery.fs.tipper.min.js?v=20170822" type="text/javascript"></script>
+<script src="/js/plugin/mediaelement-and-player.min.js?v=20170822"></script>
+<script src="/js/plugin/sidebar-menu.js?v=20170822" type="text/javascript"></script>
 <script src="https://www.youtube.com/iframe_api"></script>
-<script src="js/theme.js?v=20170828.6" type="text/javascript"></script>
-<script src="js/navigation.js?v=20170822" type="text/javascript"></script>
-<script src="js/contact.js?v=20170828.2" type="text/javascript"></script>
-<script src="js/common.js?v=20170828.1" type="text/javascript"></script>
-<script src="js/home.js?v=20170830" type="text/javascript"></script>
-<script src="js/news.js?v=20170823.3" type="text/javascript"></script>
-<!--<script src="js/app.js?v=20170828.3" type="text/javascript"></script>-->
-<script src="js/careers.js?v=20170822"></script>
+<script src="/js/theme.js?v=20170828.6" type="text/javascript"></script>
+<script src="/js/navigation.js?v=20170822" type="text/javascript"></script>
+<script src="/js/contact.js?v=20170828.2" type="text/javascript"></script>
+<script src="/js/common.js?v=20170828.1" type="text/javascript"></script>
+<script src="/js/home.js?v=20170830" type="text/javascript"></script>
+<script src="/js/news.js?v=20170823.3" type="text/javascript"></script>
+<!--<script src="/js/app.js?v=20170828.3" type="text/javascript"></script>-->
+<script src="/js/careers.js?v=20170822"></script>
 
 <script type="application/ld+json">
     { "@context" : "http://schema.org",
