updated image path

--- a/expertise/collaborationcontent.html
+++ b/expertise/collaborationcontent.html
@@ -20,9 +20,9 @@
     <meta name="fragment" content="!">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
     <!-- Favicone Icon -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
-    <link rel="icon" type="image/png" href="img/favicon.ico">
-    <link rel="apple-touch-icon" href="img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
+    <link rel="icon" type="image/png" href="/img/favicon.ico">
+    <link rel="apple-touch-icon" href="/img/favicon.ico">
     <!-- CSS -->
     <link href="/css/style.min.css?v=20170830" rel="stylesheet" type="text/css" />
     <link href="/css/bootstrap.min.css?v=20170822" rel="stylesheet" type="text/css" />
@@ -62,8 +62,8 @@
                 <!-- Logo -->
                 <div class="logo">
                     <a href="/">
-                        <!--<img class="logo-light" src="img/MAQSoftware2.png" alt="MAQ Software" />-->
-                        <img class="logo-dark" src="img/MAQSoftware.png" alt="MAQ Software" />
+                        <!--<img class="logo-light" src="/img/MAQSoftware2.png" alt="MAQ Software" />-->
+                        <img class="logo-dark" src="/img/MAQSoftware.png" alt="MAQ Software" />
                     </a>
                 </div>
                 <!-- End Logo -->
@@ -109,7 +109,7 @@
         <!-- End Header -->
 
 <!-- Intro Section -->
-<section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1 collaborationcontentposter" data-background-img="../img/Banners/collab.jpg">
+<section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1 collaborationcontentposter" data-background-img="/img/Banners/collab.jpg">
     <div class="container text-center">
         <div class="row title">
             <h2 class="h2">Collaboration & Content</h2>
@@ -269,17 +269,17 @@
     <div class="container text-center">
             <div class="item" style="display:inline-block;">
                 <div class="client-logo" >
-                    <img title="Office 365" src="../img/collaborationContent/Slider/office365.png" alt="Office365" /></a>
+                    <img title="Office 365" src="/img/collaborationContent/Slider/office365.png" alt="Office365" /></a>
                 </div>
             </div>
             <div class="item" style="display:inline-block;">
                 <div class="client-logo" >
-                    <img title="Sharepoint" src="../img/collaborationContent/Slider/sharepoint.png" alt="Sharepoint" /></a>
+                    <img title="Sharepoint" src="/img/collaborationContent/Slider/sharepoint.png" alt="Sharepoint" /></a>
                 </div>
             </div>
             <div class="item" style="display:inline-block;">
                 <div class="client-logo" >
-                    <img title="Sharepoint Online" src="../img/collaborationContent/Slider/sharepoint-online.png" alt="Sharepoint Online" /></a>
+                    <img title="Sharepoint Online" src="/img/collaborationContent/Slider/sharepoint-online.png" alt="Sharepoint Online" /></a>
                 </div>
             </div>
             
@@ -327,7 +327,7 @@
     <section class="copyright ptb-15">
         <div class="container">
             <p>
-                &copy; 2017 <a href="/"><b>MAQ Software</b></a>. All Rights Reserved. <span class="link privacy"><a href="privacystatement">Privacy Statement</a></span>
+                &copy; 2017 <a href="/"><b>MAQ Software</b></a>. All Rights Reserved. <span class="link privacy"><a href="/privacystatement">Privacy Statement</a></span>
             </p>
         </div>
     </section>
