--- a/expertise/datamanagement.html
+++ b/expertise/datamanagement.html
@@ -20,9 +20,9 @@
     <meta name="fragment" content="!">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
     <!-- Favicone Icon -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
-    <link rel="icon" type="image/png" href="img/favicon.ico">
-    <link rel="apple-touch-icon" href="img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
+    <link rel="icon" type="image/png" href="/img/favicon.ico">
+    <link rel="apple-touch-icon" href="/img/favicon.ico">
     <!-- CSS -->
     <link href="/css/style.min.css?v=20170830" rel="stylesheet" type="text/css" />
     <link href="/css/bootstrap.min.css?v=20170822" rel="stylesheet" type="text/css" />
@@ -62,8 +62,8 @@
                 <!-- Logo -->
                 <div class="logo">
                     <a href="/">
-                        <!--<img class="logo-light" src="img/MAQSoftware2.png" alt="MAQ Software" />-->
-                        <img class="logo-dark" src="img/MAQSoftware.png" alt="MAQ Software" />
+                        <!--<img class="logo-light" src="/img/MAQSoftware2.png" alt="MAQ Software" />-->
+                        <img class="logo-dark" src="/img/MAQSoftware.png" alt="MAQ Software" />
                     </a>
                 </div>
                 <!-- End Logo -->
@@ -109,7 +109,7 @@
         <!-- End Header -->
 
 <!-- Intro Section -->
-<section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1 datamanagementposter" data-background-img="../img/Banners/data.jpg">
+<section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1 datamanagementposter" data-background-img="/img/Banners/data.jpg">
     <div class="container text-center">
         <div class="row title">
             <h2 class="h2">Data Management</h2>
@@ -382,28 +382,28 @@
         <div class="owl-carousel ai-carousel nf-carousel-theme ">
             <div class="item">
                 <div class="client-logo">
-                    <img title="SQL Server Business Intelligence" src="../img/datamanagement/sqlserver.png" alt="SQL Server Business Intelligence" /></a>
+                    <img title="SQL Server Business Intelligence" src="/img/datamanagement/sqlserver.png" alt="SQL Server Business Intelligence" /></a>
                 </div>
             </div>
             <div class="item">
                 <div class="client-logo">
-                    <img title="Azure Cosmos DB" src="../img/datamanagement/cosmos.png" alt="Azure Cosmos DB" /></a>
+                    <img title="Azure Cosmos DB" src="/img/datamanagement/cosmos.png" alt="Azure Cosmos DB" /></a>
                 </div>
             </div>
             
             <div class="item">
                 <div class="client-logo">
-                    <img title="Amazon Redshift Business Intelligence" src="../img/datamanagement/redshift.png" alt="Amazon Redshift Business Intelligence" /></a>
+                    <img title="Amazon Redshift Business Intelligence" src="/img/datamanagement/redshift.png" alt="Amazon Redshift Business Intelligence" /></a>
                 </div>
             </div>
             <div class="item">
                 <div class="client-logo">
-                    <img title="Oracle Business Intelligence" src="../img/datamanagement/oracle.png" alt="Oracle Business Intelligence" /></a>
+                    <img title="Oracle Business Intelligence" src="/img/datamanagement/oracle.png" alt="Oracle Business Intelligence" /></a>
                 </div>
             </div>
             <div class="item">
                 <div class="client-logo">
-                    <img title="MySQL Business Intelligence" src="../img/datamanagement/mysql.png" alt="MySQL Business Intelligence" /></a>
+                    <img title="MySQL Business Intelligence" src="/img/datamanagement/mysql.png" alt="MySQL Business Intelligence" /></a>
                 </div>
             </div>
         </div>
@@ -451,7 +451,7 @@
     <section class="copyright ptb-15">
         <div class="container">
             <p>
-                &copy; 2017 <a href="/"><b>MAQ Software</b></a>. All Rights Reserved. <span class="link privacy"><a href="privacystatement">Privacy Statement</a></span>
+                &copy; 2017 <a href="/"><b>MAQ Software</b></a>. All Rights Reserved. <span class="link privacy"><a href="/privacystatement">Privacy Statement</a></span>
             </p>
         </div>
     </section>
