--- a/expertise/powerbiviewall.html
+++ b/expertise/powerbiviewall.html
@@ -20,9 +20,9 @@
     <meta name="fragment" content="!">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
     <!-- Favicone Icon -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
-    <link rel="icon" type="image/png" href="img/favicon.ico">
-    <link rel="apple-touch-icon" href="img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
+    <link rel="icon" type="image/png" href="/img/favicon.ico">
+    <link rel="apple-touch-icon" href="/img/favicon.ico">
     <!-- CSS -->
     <link href="/css/style.min.css?v=20170830" rel="stylesheet" type="text/css" />
     <link href="/css/bootstrap.min.css?v=20170822" rel="stylesheet" type="text/css" />
@@ -62,8 +62,8 @@
                 <!-- Logo -->
                 <div class="logo">
                     <a href="/">
-                        <!--<img class="logo-light" src="img/MAQSoftware2.png" alt="MAQ Software" />-->
-                        <img class="logo-dark" src="img/MAQSoftware.png" alt="MAQ Software" />
+                        <!--<img class="logo-light" src="/img/MAQSoftware2.png" alt="MAQ Software" />-->
+                        <img class="logo-dark" src="/img/MAQSoftware.png" alt="MAQ Software" />
                     </a>
                 </div>
                 <!-- End Logo -->
@@ -1392,7 +1392,7 @@
     <section class="copyright ptb-15">
         <div class="container">
             <p>
-                &copy; 2017 <a href="/"><b>MAQ Software</b></a>. All Rights Reserved. <span class="link privacy"><a href="privacystatement">Privacy Statement</a></span>
+                &copy; 2017 <a href="/"><b>MAQ Software</b></a>. All Rights Reserved. <span class="link privacy"><a href="/privacystatement">Privacy Statement</a></span>
             </p>
         </div>
     </section>
