--- a/careers.html
+++ b/careers.html
@@ -20,9 +20,9 @@
     <meta name="fragment" content="!">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
     <!-- Favicone Icon -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
-    <link rel="icon" type="image/png" href="img/favicon.ico">
-    <link rel="apple-touch-icon" href="img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
+    <link rel="icon" type="image/png" href="/img/favicon.ico">
+    <link rel="apple-touch-icon" href="/img/favicon.ico">
     <!-- CSS -->
     <link href="/css/style.min.css?v=20170830" rel="stylesheet" type="text/css" />
     <link href="/css/bootstrap.min.css?v=20170822" rel="stylesheet" type="text/css" />
@@ -62,8 +62,8 @@
                 <!-- Logo -->
                 <div class="logo">
                     <a href="/">
-                        <!--<img class="logo-light" src="img/MAQSoftware2.png" alt="MAQ Software" />-->
-                        <img class="logo-dark" src="img/MAQSoftware.png" alt="MAQ Software" />
+                        <!--<img class="logo-light" src="/img/MAQSoftware2.png" alt="MAQ Software" />-->
+                        <img class="logo-dark" src="/img/MAQSoftware.png" alt="MAQ Software" />
                     </a>
                 </div>
                 <!-- End Logo -->
@@ -112,7 +112,7 @@
 <!-- Intro Video Section -->
 <!--<div id="video" class="ytp-player" data-property="{videoURL:'https://www.youtube.com/v/mgyfCETF1lA',containment:'#intro', showControls:true, autoPlay:true, loop:true, mute:true, startAt:1, opacity:1, addRaster:false, quality:'default'}"></div>
 -->
-<section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1" data-background-img="../img/Banners/career.jpg">
+<section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1" data-background-img="/img/Banners/career.jpg">
     <div class="container">
         <div class="row title">
             <h2 class="h2">Careers</h2>
@@ -212,10 +212,10 @@
                 <div class="col-md-5 offset-md-1 text-center">
                     <div class="row">
                         <div class="col-md">
-                            <a href="http://www.iitbook.in/" target="_blank"><img src="img/Careers/iitbook-careers.png" width="200" title="What I Did Not Learn at IIT" alt="What I Did Not Learn at IIT" /></br>IITbook.in</a>
+                            <a href="http://www.iitbook.in/" target="_blank"><img src="/img/Careers/iitbook-careers.png" width="200" title="What I Did Not Learn at IIT" alt="What I Did Not Learn at IIT" /></br>IITbook.in</a>
                         </div>
                         <div class="col-md">
-                            <a href="https://www.mbabook.in/" target="_blank"><img src="img/Careers/mbabook-careers.png" width="200" tite="What I Did Not Learn in B-School" alt="What I Did Not Learn in B-School" /></br>MBAbook.in</a>
+                            <a href="https://www.mbabook.in/" target="_blank"><img src="/img/Careers/mbabook-careers.png" width="200" tite="What I Did Not Learn in B-School" alt="What I Did Not Learn in B-School" /></br>MBAbook.in</a>
                         </div>
                     </div>
                 </div>
@@ -564,7 +564,7 @@
     <section class="copyright ptb-15">
         <div class="container">
             <p>
-                &copy; 2017 <a href="/"><b>MAQ Software</b></a>. All Rights Reserved. <span class="link privacy"><a href="privacystatement">Privacy Statement</a></span>
+                &copy; 2017 <a href="/"><b>MAQ Software</b></a>. All Rights Reserved. <span class="link privacy"><a href="/privacystatement">Privacy Statement</a></span>
             </p>
         </div>
     </section>
