--- a/engagement/index.html
+++ b/engagement/index.html
@@ -20,9 +20,9 @@
     <meta name="fragment" content="!">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
     <!-- Favicone Icon -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
-    <link rel="icon" type="image/png" href="img/favicon.ico">
-    <link rel="apple-touch-icon" href="img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
+    <link rel="icon" type="image/png" href="/img/favicon.ico">
+    <link rel="apple-touch-icon" href="/img/favicon.ico">
     <!-- CSS -->
     <link href="/css/style.min.css?v=20170830" rel="stylesheet" type="text/css" />
     <link href="/css/bootstrap.min.css?v=20170822" rel="stylesheet" type="text/css" />
@@ -62,8 +62,8 @@
                 <!-- Logo -->
                 <div class="logo">
                     <a href="/">
-                        <!--<img class="logo-light" src="img/MAQSoftware2.png" alt="MAQ Software" />-->
-                        <img class="logo-dark" src="img/MAQSoftware.png" alt="MAQ Software" />
+                        <!--<img class="logo-light" src="/img/MAQSoftware2.png" alt="MAQ Software" />-->
+                        <img class="logo-dark" src="/img/MAQSoftware.png" alt="MAQ Software" />
                     </a>
                 </div>
                 <!-- End Logo -->
@@ -109,7 +109,7 @@
         <!-- End Header -->
 
 <!-- Intro Section -->
-<section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1 aboutposter" data-background-img="../img/Banners/about.jpg">
+<section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1 aboutposter" data-background-img="/img/Banners/about.jpg">
     <div class="container">
         <div class="row title">
             <h2 class="h2">About Us</h2>
@@ -175,7 +175,7 @@
 
 
 <!-- Service -->
-<section id="service" class="pt-90 pb-45 pb-sm-80 dark-bg parallax overlay-dark80" style="background-image: url('../img/Banners/agile.jpg');" data-stellar-background-ratio="0.5">
+<section id="service" class="pt-90 pb-45 pb-sm-80 dark-bg parallax overlay-dark80" style="background-image: url('/img/Banners/agile.jpg');" data-stellar-background-ratio="0.5">
     <div class="wow fadeIn container text-center animated" style="visibility: visible; animation-name: fadeIn;">
         <h3>REDUCING CYCLE TIME USING AGILE AND DEVOPS MODEL</h3>
         <div class="spacer-60"></div>
@@ -285,7 +285,7 @@
     <section class="copyright ptb-15">
         <div class="container">
             <p>
-                &copy; 2017 <a href="/"><b>MAQ Software</b></a>. All Rights Reserved. <span class="link privacy"><a href="privacystatement">Privacy Statement</a></span>
+                &copy; 2017 <a href="/"><b>MAQ Software</b></a>. All Rights Reserved. <span class="link privacy"><a href="/privacystatement">Privacy Statement</a></span>
             </p>
         </div>
     </section>
