--- a/expertise/appdevelopment.html
+++ b/expertise/appdevelopment.html
@@ -20,9 +20,9 @@
     <meta name="fragment" content="!">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
     <!-- Favicone Icon -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
-    <link rel="icon" type="image/png" href="img/favicon.ico">
-    <link rel="apple-touch-icon" href="img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
+    <link rel="icon" type="image/png" href="/img/favicon.ico">
+    <link rel="apple-touch-icon" href="/img/favicon.ico">
     <!-- CSS -->
     <link href="/css/style.min.css?v=20170830" rel="stylesheet" type="text/css" />
     <link href="/css/bootstrap.min.css?v=20170822" rel="stylesheet" type="text/css" />
@@ -62,8 +62,8 @@
                 <!-- Logo -->
                 <div class="logo">
                     <a href="/">
-                        <!--<img class="logo-light" src="img/MAQSoftware2.png" alt="MAQ Software" />-->
-                        <img class="logo-dark" src="img/MAQSoftware.png" alt="MAQ Software" />
+                        <!--<img class="logo-light" src="/img/MAQSoftware2.png" alt="MAQ Software" />-->
+                        <img class="logo-dark" src="/img/MAQSoftware.png" alt="MAQ Software" />
                     </a>
                 </div>
                 <!-- End Logo -->
@@ -109,7 +109,7 @@
         <!-- End Header -->
 
          <!-- Intro Section -->
-<section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1 appdevelopmentposter" data-background-img="../img/Banners/app.jpg">
+<section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1 appdevelopmentposter" data-background-img="/img/Banners/app.jpg">
     <div class="container text-center">
         <div class="row title">
             <h2 class="h2">App Development</h2>
@@ -233,27 +233,27 @@
         <div class="owl-carousel ai-carousel nf-carousel-theme ">
             <div class="item">
                 <div class="client-logo">
-                    <img title="Google Play" src="../img/App Development/Slider/googleplay.png" alt="Google Play" /></a>
+                    <img title="Google Play" src="/img/App Development/Slider/googleplay.png" alt="Google Play" /></a>
                 </div>
             </div>
             <div class="item">
                 <div class="client-logo">
-                    <img title="IOS" src="../img/App Development/Slider/ios.png" alt="IOS" /></a>
+                    <img title="IOS" src="/img/App Development/Slider/ios.png" alt="IOS" /></a>
                 </div>
             </div>
             <div class="item">
                 <div class="client-logo">
-                    <img title="NodeJS" src="../img/App Development/Slider/nodejs.png" alt="NodeJS" /></a>
+                    <img title="NodeJS" src="/img/App Development/Slider/nodejs.png" alt="NodeJS" /></a>
                 </div>
             </div>
             <div class="item">
                 <div class="client-logo">
-                    <img title="Office" src="../img/App Development/Slider/office.png" alt="Office" /></a>
+                    <img title="Office" src="/img/App Development/Slider/office.png" alt="Office" /></a>
                 </div>
             </div>
             <div class="item">
                 <div class="client-logo">
-                    <img title="Typescript" src="../img/App Development/Slider/typescript.png" alt="Typescript" /></a>
+                    <img title="Typescript" src="/img/App Development/Slider/typescript.png" alt="Typescript" /></a>
                 </div>
             </div>
         </div>
@@ -301,7 +301,7 @@
     <section class="copyright ptb-15">
         <div class="container">
             <p>
-                &copy; 2017 <a href="/"><b>MAQ Software</b></a>. All Rights Reserved. <span class="link privacy"><a href="privacystatement">Privacy Statement</a></span>
+                &copy; 2017 <a href="/"><b>MAQ Software</b></a>. All Rights Reserved. <span class="link privacy"><a href="/privacystatement">Privacy Statement</a></span>
             </p>
         </div>
     </section>
