--- a/news.html
+++ b/news.html
@@ -20,9 +20,9 @@
     <meta name="fragment" content="!">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
     <!-- Favicone Icon -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
-    <link rel="icon" type="image/png" href="img/favicon.ico">
-    <link rel="apple-touch-icon" href="img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
+    <link rel="icon" type="image/png" href="/img/favicon.ico">
+    <link rel="apple-touch-icon" href="/img/favicon.ico">
     <!-- CSS -->
     <link href="/css/style.min.css?v=20170830" rel="stylesheet" type="text/css" />
     <link href="/css/bootstrap.min.css?v=20170822" rel="stylesheet" type="text/css" />
@@ -62,8 +62,8 @@
                 <!-- Logo -->
                 <div class="logo">
                     <a href="/">
-                        <!--<img class="logo-light" src="img/MAQSoftware2.png" alt="MAQ Software" />-->
-                        <img class="logo-dark" src="img/MAQSoftware.png" alt="MAQ Software" />
+                        <!--<img class="logo-light" src="/img/MAQSoftware2.png" alt="MAQ Software" />-->
+                        <img class="logo-dark" src="/img/MAQSoftware.png" alt="MAQ Software" />
                     </a>
                 </div>
                 <!-- End Logo -->
@@ -109,7 +109,7 @@
         <!-- End Header -->
 
 <!-- Intro Section -->
-<section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1 newsposter" data-background-img="img/Banners/news.jpg">
+<section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1 newsposter" data-background-img="/img/Banners/news.jpg">
     <div class="container">
         <div class="row title">
             <h2 class="h2">News</h2>
@@ -262,7 +262,7 @@
                     <hr>
                     <ul>
                         <li>
-                            <img class="newsPic" title="Inc." alt="Inc." src="img/news/inclogoclear.png">
+                            <img class="newsPic" title="Inc." alt="Inc." src="/img/news/inclogoclear.png">
                         </li>
                         </br>
                         <li>
@@ -272,7 +272,7 @@
                         </li>
                         </br>
                         <li>
-                            <img class="newsPic" alt="The Seattle Times" title="The Seattle Times" src="img/news/seattleTimes.png">
+                            <img class="newsPic" alt="The Seattle Times" title="The Seattle Times" src="/img/news/seattleTimes.png">
                         </li>
                         </br>
                         <li>
@@ -289,7 +289,7 @@
                         </li>
                         <br />
                         <li>
-                            <img class="newsPic" src="img/news/psbj.png">
+                            <img class="newsPic" src="/img/news/psbj.png">
                         </li>
                         </br>
                         <li>
@@ -312,7 +312,7 @@
                         </li>
                         <br />
                         <li>
-                            <img alt="BBC News" title="BBC News" class="newsPic" src="img/news/bbcnews.png">
+                            <img alt="BBC News" title="BBC News" class="newsPic" src="/img/news/bbcnews.png">
                         </li>
                         </br>
                         <li>
@@ -370,7 +370,7 @@
     <section class="copyright ptb-15">
         <div class="container">
             <p>
-                &copy; 2017 <a href="/"><b>MAQ Software</b></a>. All Rights Reserved. <span class="link privacy"><a href="privacystatement">Privacy Statement</a></span>
+                &copy; 2017 <a href="/"><b>MAQ Software</b></a>. All Rights Reserved. <span class="link privacy"><a href="/privacystatement">Privacy Statement</a></span>
             </p>
         </div>
     </section>
