added body section in pages

--- a/careers.html
+++ b/careers.html
@@ -107,7 +107,8 @@
             </div>
         </header>
         <!-- End Header -->
-
+        <!-- CONTENT --------------------------------------------------------------------------------->
+        <section id="body" class="ls-point01em">
 <!-- Intro Section -->
 <!-- Intro Video Section -->
 <!--<div id="video" class="ytp-player" data-property="{videoURL:'https://www.youtube.com/v/mgyfCETF1lA',containment:'#intro', showControls:true, autoPlay:true, loop:true, mute:true, startAt:1, opacity:1, addRaster:false, quality:'default'}"></div>
@@ -523,6 +524,9 @@
 </section>
 <!-- Job Section -->
 
+</section>
+<!-- END CONTENT ---------------------------------------------------------------------------->
+<!-- FOOTER -->
 <footer class="footer ls-point01em pt-60">
     <div class="container">
         <div class="row mb-30">
