--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,8 @@
             </div>
         </header>
         <!-- End Header -->
-
+        <!-- CONTENT --------------------------------------------------------------------------------->
+        <section id="body" class="ls-point01em">
 <!-- Intro Section -->
 <section class="inner-intro bg-image overlay-dark dark-bg parallax parallax-background1 contactposter" data-background-img="/img/Banners/contact.jpg">
     <div class="container">
@@ -246,6 +247,9 @@
 <!-- Map Section -->
 <!--<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBHkJlVTrAkgcD9jJxo_CyHx0YZZtX65iY&callback=initMap"></script>-->
 
+</section>
+<!-- END CONTENT ---------------------------------------------------------------------------->
+<!-- FOOTER -->
 <footer class="footer ls-point01em pt-60">
     <div class="container">
         <div class="row mb-30">
