--- a/engagement/recognitions.html
+++ b/engagement/recognitions.html
@@ -107,7 +107,8 @@
             </div>
         </header>
         <!-- End Header -->
-
+        <!-- CONTENT --------------------------------------------------------------------------------->
+        <section id="body" class="ls-point01em">
 <!-- Intro Section -->
 <section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1 recognitionsposter" data-background-img="/img/Banners/recognition.jpg">
     <div class="container">
@@ -208,6 +209,9 @@
 <!-- End Service -->
 <hr />
 <!-- About Section -->
+</section>
+<!-- END CONTENT ---------------------------------------------------------------------------->
+<!-- FOOTER -->
 <footer class="footer ls-point01em pt-60">
     <div class="container">
         <div class="row mb-30">
