--- a/expertise/appdevelopment.html
+++ b/expertise/appdevelopment.html
@@ -107,7 +107,8 @@
             </div>
         </header>
         <!-- End Header -->
-
+        <!-- CONTENT --------------------------------------------------------------------------------->
+        <section id="body" class="ls-point01em">
          <!-- Intro Section -->
 <section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1 appdevelopmentposter" data-background-img="/img/Banners/app.jpg">
     <div class="container text-center">
@@ -260,6 +261,9 @@
     </div>
 </section>
 
+</section>
+<!-- END CONTENT ---------------------------------------------------------------------------->
+<!-- FOOTER -->
 <footer class="footer ls-point01em pt-60">
     <div class="container">
         <div class="row mb-30">
