--- a/expertise/cloudtransformation.html
+++ b/expertise/cloudtransformation.html
@@ -107,7 +107,8 @@
             </div>
         </header>
         <!-- End Header -->
-
+        <!-- CONTENT --------------------------------------------------------------------------------->
+        <section id="body" class="ls-point01em">
 <!-- Intro Section -->
 <section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1 cloudtransformationposter" data-background-img="/img/Banners/cloud.jpg">
     <div class="container text-center">
@@ -244,6 +245,9 @@
         
     </div>
 </section>
+</section>
+<!-- END CONTENT ---------------------------------------------------------------------------->
+<!-- FOOTER -->
 <footer class="footer ls-point01em pt-60">
     <div class="container">
         <div class="row mb-30">
