--- a/header.html
+++ b/header.html
@@ -107,3 +107,5 @@
             </div>
         </header>
         <!-- End Header -->
+        <!-- CONTENT --------------------------------------------------------------------------------->
+        <section id="body" class="ls-point01em">
