--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
             </div>
         </header>
         <!-- End Header -->
-
+        <!-- CONTENT --------------------------------------------------------------------------------->
+        <section id="body" class="ls-point01em">
 <!-- Intro Section -->
 <section class="home-slider dark-bg" style="padding-top:64px;">
     <div class="owl-carousel fullwidth-slider white content-carousel content-slider o-flow-hidden">
@@ -424,6 +425,9 @@
 </section>
 <!-- End Client Logos Section -->
 <section id="bloggerContent" class="hidden"></section>
+</section>
+<!-- END CONTENT ---------------------------------------------------------------------------->
+<!-- FOOTER -->
 <footer class="footer ls-point01em pt-60">
     <div class="container">
         <div class="row mb-30">
