--- a/privacystatement.html
+++ b/privacystatement.html
@@ -107,7 +107,8 @@
             </div>
         </header>
         <!-- End Header -->
-
+        <!-- CONTENT --------------------------------------------------------------------------------->
+        <section id="body" class="ls-point01em">
 <!-- Intro Section -->
 <section class="inner-intro bg-image overlay-dark dark-bg parallax parallax-background1 contactposter" data-background-img="/img/Banners/privacy-policy.jpg">
     <div class="container">
@@ -169,6 +170,9 @@
     </section>
     <!-- End Sidebar Section -->   
 </div>
+</section>
+<!-- END CONTENT ---------------------------------------------------------------------------->
+<!-- FOOTER -->
 <footer class="footer ls-point01em pt-60">
     <div class="container">
         <div class="row mb-30">
