--- a/expertise/collaborationcontent.html
+++ b/expertise/collaborationcontent.html
@@ -107,7 +107,8 @@
             </div>
         </header>
         <!-- End Header -->
-
+        <!-- CONTENT --------------------------------------------------------------------------------->
+        <section id="body" class="ls-point01em">
 <!-- Intro Section -->
 <section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1 collaborationcontentposter" data-background-img="/img/Banners/collab.jpg">
     <div class="container text-center">
@@ -286,6 +287,9 @@
         
     </div>
 </section>
+</section>
+<!-- END CONTENT ---------------------------------------------------------------------------->
+<!-- FOOTER -->
 <footer class="footer ls-point01em pt-60">
     <div class="container">
         <div class="row mb-30">
