--- a/expertise/datamanagement.html
+++ b/expertise/datamanagement.html
@@ -107,7 +107,8 @@
             </div>
         </header>
         <!-- End Header -->
-
+        <!-- CONTENT --------------------------------------------------------------------------------->
+        <section id="body" class="ls-point01em">
 <!-- Intro Section -->
 <section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1 datamanagementposter" data-background-img="/img/Banners/data.jpg">
     <div class="container text-center">
@@ -410,6 +411,9 @@
     </div>
 </section>
 <!-- End Team -->
+</section>
+<!-- END CONTENT ---------------------------------------------------------------------------->
+<!-- FOOTER -->
 <footer class="footer ls-point01em pt-60">
     <div class="container">
         <div class="row mb-30">
