--- a/expertise/powerbi.html
+++ b/expertise/powerbi.html
@@ -107,7 +107,8 @@
             </div>
         </header>
         <!-- End Header -->
-
+        <!-- CONTENT --------------------------------------------------------------------------------->
+        <section id="body" class="ls-point01em">
 <!-- Intro Section -->
 <section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1" data-background-img="../img/Banners/BI.jpg">
     <div class="container text-center">
@@ -1820,6 +1821,9 @@
     </div>
 </div>
 <!-- Modal -->
+</section>
+<!-- END CONTENT ---------------------------------------------------------------------------->
+<!-- FOOTER -->
 <footer class="footer ls-point01em pt-60">
     <div class="container">
         <div class="row mb-30">
