--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,7 @@
-﻿<footer class="footer ls-point01em pt-60">
+﻿</section>
+<!-- END CONTENT ---------------------------------------------------------------------------->
+<!-- FOOTER -->
+<footer class="footer ls-point01em pt-60">
     <div class="container">
         <div class="row mb-30">
             <div class="col-md-5  col-sm-4 mb-30">
