--- a/news.html
+++ b/news.html
@@ -107,7 +107,8 @@
             </div>
         </header>
         <!-- End Header -->
-
+        <!-- CONTENT --------------------------------------------------------------------------------->
+        <section id="body" class="ls-point01em">
 <!-- Intro Section -->
 <section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1 newsposter" data-background-img="/img/Banners/news.jpg">
     <div class="container">
@@ -329,6 +330,9 @@
 </section>
 <!-- End Blog Post Section -->
 <section id="bloggerContent" class="hidden"></section>
+</section>
+<!-- END CONTENT ---------------------------------------------------------------------------->
+<!-- FOOTER -->
 <footer class="footer ls-point01em pt-60">
     <div class="container">
         <div class="row mb-30">
