--- a/powerbisupport.html
+++ b/powerbisupport.html
@@ -107,7 +107,8 @@
             </div>
         </header>
         <!-- End Header -->
-
+        <!-- CONTENT --------------------------------------------------------------------------------->
+        <section id="body" class="ls-point01em">
 <div class="wrapper">
 <section class="ptb-40 ptb-sm-80">
         <div class="container">
@@ -123,6 +124,9 @@
         </div>
     </section>
 </div>
+</section>
+<!-- END CONTENT ---------------------------------------------------------------------------->
+<!-- FOOTER -->
 <footer class="footer ls-point01em pt-60">
     <div class="container">
         <div class="row mb-30">
