--- a/expertise/index.html
+++ b/expertise/index.html
@@ -477,7 +477,8 @@
 <script src="/js/plugin/tether.min.js?v=20170822" type="text/javascript"></script>
 <script src="/js/jquery-1.11.2.min.js?v=20170822" type="text/javascript"></script>
 <script src="/js/plugin/jquery.easing.js?v=20170822" type="text/javascript"></script>
-<script src="/js/jquery-ui.min.js?v=20170822" type="text/javascript"></script>
+<!-- Commented jquery UI as it was conflicting with bootstrap ui -->
+<!--<script src="/js/jquery-ui.min.js?v=20170822" type="text/javascript"></script>-->
 <script src="/js/bootstrap.min.js?v=20170822" type="text/javascript"></script>
 <script src="/js/plugin/jquery.flexslider.js?v=20170822" type="text/javascript"></script>
 <script src="/js/plugin/jquery.fitvids.js?v=20170822" type="text/javascript"></script>
