--- a/js/onloadscripts/careers.html
+++ b/js/onloadscripts/careers.html
@@ -1,7 +1,8 @@
 ﻿<script>
     loadPlugins();
     setTabNavLinkBehavior();
-    onYouTubeIframeAPIReady();
+    // commented below function call, it was required in Angular because object reference was lost
+    //onYouTubeIframeAPIReady();
     // call Career Constructor
     careersConstructor();
     updateTitle("careers");
