--- a/js/onloadscripts/contact.html
+++ b/js/onloadscripts/contact.html
@@ -2,4 +2,9 @@
     loadPlugins();
     contactConstructor();
     updateTitle("contact");
+
+    // load script dynamically using any method
+    var googlemaps = document.createElement('script');
+    googlemaps.setAttribute('src', 'https://maps.googleapis.com/maps/api/js?v=3&sensor=true&key=AIzaSyBHkJlVTrAkgcD9jJxo_CyHx0YZZtX65iY&callback=initMap');
+    document.head.appendChild(googlemaps);
 </script>
