--- a/expertise/index.html
+++ b/expertise/index.html
@@ -186,7 +186,7 @@
                 <div id="tabs-2" class="tab-pane fade">
                     <div class="row mt-30">
                         <div class="col-md-4">
-                            <div class="row tabHeader-1">
+                            <div class="row tabHeader-2">
                                 <div class= "col-md-12">
                                     <h4 class="blurbH">Managed Storage</h4>
                                 </div>
@@ -198,7 +198,7 @@
                             </div>
                         </div>
                         <div class="col-md-8">
-                            <div class="row tabHeader-1">
+                            <div class="row tabHeader-2">
                                 <div class= "col-md-7">
                                     <h5>Deeper Insights</h5>
                                 </div>
@@ -225,7 +225,7 @@
                 <div id="tabs-3" class="tab-pane fade ">
                     <div class="row mt-30">
                         <div class="col-md-4">
-                            <div class="row tabHeader-1">
+                            <div class="row tabHeader-2">
                                 <div class= "col-md-12">
                                     <h4 class="blurbH">Customer Insights</h4>
                                 </div>
@@ -237,7 +237,7 @@
                             </div>
                         </div>
                         <div class="col-md-8">
-                            <div class="row tabHeader-1">
+                            <div class="row tabHeader-2">
                                 <div class= "col-md-7">
                                     <h5>Leverage Your Data</h5>
                                 </div>
@@ -264,7 +264,7 @@
                 <div id="tabs-4" class="tab-pane fade">
                     <div class="row mt-30">
                         <div class="col-md-4">
-                            <div class="row tabHeader-1">
+                            <div class="row tabHeader-2">
                                 <div class= "col-md-12">
                                     <h4 class="blurbH">Cost Efficiency</h4>
                                 </div>
@@ -276,7 +276,7 @@
                             </div>
                         </div>
                         <div class="col-md-8">
-                            <div class="row tabHeader-1">
+                            <div class="row tabHeader-2">
                                 <div class= "col-md-7">
                                     <h5>Operate Efficiently</h5>
                                 </div>
@@ -303,9 +303,9 @@
                 
                 <!-- Azure Data Lake-->
                 <div id="tabs-5" class="tab-pane fade">
-                    <div class="row pb-30">
+                    <div class="row mt-30">
                         <div class="col-md-4">
-                            <div class="row tabHeader-2 ">
+                            <div class="row tabHeader-3">
                                 <div class= "col-md-12">
                                     <h4 class="blurbH">Creative Data Lake Solutions</h4>
                                 </div>
@@ -317,12 +317,12 @@
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <div class="row tabHeader-2 ">
+                            <div class="row tabHeader-3">
                                 <div class= "col-md-12">
                                         <h5>Render Data to HTML5 Report</h5>
                                 </div>
                             </div>
-                            <div class="row tabContent-216 mb-30">
+                            <div class="row tabContent-216">
                                 <div class= "col-md-12">
                                     <ul class="CircleBullets">
                                             <li>We use U-SQL based queries and Azure Data Lake API to surface data from Azure Data Lake on rich HTML5 visuals.</li>
@@ -330,12 +330,12 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="row tabHeader-1 ">
+                            <div class="row tabHeader-2">
                                 <div class= "col-md-12">
                                         <h5>Data Manipulation</h5>
                                 </div>
                             </div>
-                            <div class="row tabContent mb-30">
+                            <div class="row tabContent">
                                 <div class="col-md-12">
                                     <ul class="CircleBullets">
                                             <li>We create custom reducers which enhance the out of box Azure Data Lake operators to perform complicated business logic.</li>
@@ -345,12 +345,12 @@
                             </div>
                         </div>
                         <div class= "col-md-4">   
-                            <div class="row tabHeader-2 ">
+                            <div class="row tabHeader-3">
                                 <div class= "col-md-12 ">
                                     <h5>Real Time Power BI Reports</h5>
                                 </div>
                             </div>
-                            <div class="row tabContent-216 mb-30">
+                            <div class="row tabContent-216">
                                 <div class= "col-md-12">
                                     <ul class="CircleBullets">
                                             <li>We use Azure Data Lake Export API and Power BI REST API to push latest data from Azure Data Lake to Power BI datasets.</li>
@@ -358,12 +358,12 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="row tabHeader-1 ">
-                                <div class= "col-md-12 ">
+                            <div class="row tabHeader-2">
+                                <div class= "col-md-12">
                                         <h5>Secure Sensitive Data</h5>
                                 </div>
                             </div>
-                            <div class="row tabContent mb-30">
+                            <div class="row tabContent">
                                 <div class="col-md-12">
                                     <ul class="CircleBullets">
                                             <li>We use a custom Rijndael based encryption utility to secure PII data at rest on Azure Data Lake or during processing on Azure Data Lake.</li>                    
