--- a/news.html
+++ b/news.html
@@ -63,7 +63,8 @@
         // Additional JS functions here
         window.fbAsyncInit = function () {
             FB.init({
-                appId: '182213115710154', // App ID
+                // 182213115710154 - MAQ Software
+                appId: '148991115671044', // App ID
                 status: true,    // check login status
                 cookie: true,    // enable cookies to allow the
                 // server to access the session
