--- a/news.html
+++ b/news.html
@@ -64,7 +64,9 @@
         window.fbAsyncInit = function () {
             FB.init({
                 // 182213115710154 - MAQ Software
-                appId: '148991115671044', // App ID
+                //appId: '148991115671044', // App ID - lma 
+                appId: '398351013933439', // App ID - lma 2 MAQ Software's App
+                
                 status: true,    // check login status
                 cookie: true,    // enable cookies to allow the
                 // server to access the session
