--- a/news.html
+++ b/news.html
@@ -20,11 +20,11 @@
     <meta property="og:image:height" content="298" />
     <!-- End Open Graph data -->
     <!-- Twitter Card data -->
-    <meta name="twitter:card" content="summary" />
+    <!--<meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@maqsoftware" />
     <meta name="twitter:title" content="MAQ Software | Data Management, Power BI, Artificial Intelligence" />
     <meta name="twitter:description" content="MAQ Software delivers innovative software, data management, Power BI, Sharepoint, cloud, and artificial intelligence solutions for Fortune 500 companies." />
-    <meta name="twitter:image" content="/img/Banners/news.jpg" />
+    <meta name="twitter:image" content="/img/Banners/news.jpg" />-->
     <!-- End Twitter Card data -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     <meta name="fragment" content="!">
