--- a/news.html
+++ b/news.html
@@ -31,7 +31,7 @@ xmlns:fb="http://ogp.me/ns/fb#">
     />
     <meta name="twitter:description" content="MAQ Software delivers innovative software, data management, Power BI, Sharepoint, cloud, and artificial intelligence solutions for Fortune 500 companies." 
     />
-    <meta name="twitter:image" content="/img/Banners/news.jpg" 
+    <meta name="twitter:image" content="https://4.bp.blogspot.com/-WVAyjiyTbuE/WinjvzzUxvI/AAAAAAAAArU/LHUt1bhkGss2qwLyD-XXK_IEFaxgMbk4QCLcBGAs/s1600/23Visuals.png" 
     />
     <!-- End Twitter Card data -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
