--- a/news-article.html
+++ b/news-article.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="maq software, innovative software, data management, Power BI, Sharepoint, cloud, artificial intelligence" />
     <meta name="ROBOTS" content="FOLLOW,INDEX" />
     <!-- Open Graph data -->
+    <meta name="fb:app_id" proeprty="fb:app_id" content="1976312982420598" />
     <meta name="og:title" property="og:title" content="MAQ Software | Data Management, Power BI, Artificial Intelligence" />
     <meta name="og:description" property="og:description" content="MAQ Software Case Studies" />
     <meta name="og:image" property="og:image" content="https://maqsoftware.com/img/Banners/news.jpg" />
